# rust-socket-learnings

./: Cargo.toml  README.md  docker-compose.yml
auth_service/: .env  Cargo.toml
auth_service/migrations/: 20260221015042_users_001.sql
auth_service/src/: db.rs  handlers.rs  jwt.rs  key_handlers.rs  main.rs  models.rs  routes.rs
socket_server/: .env  Cargo.toml
socket_server/src/: conversation.rs  main.rs  protocol.rs  router.rs  send.rs  state.rs
socket_server/src/commands/: authenticate.rs  create_conversation.rs  mod.rs  say.rs
socket_server/src/handlers/: connected.rs  received.rs
src/: main.rs  protocol.rs  router.rs  send.rs  state.rs
src/commands/: mod.rs  register.rs  say.rs
src/handlers/: connected.rs  disconnected.rs  mod.rs  received.rs
web_client/: package-lock.json  package.json
web_client/src/: App.css  App.tsx
