[package]
name = "auth_service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
axum = "0.8.8"
serde = "1.0.228"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
serde_json = "1.0.145"
dotenvy = "0.15.7"
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
password-hash = "0.5"
rand = "0.10.0"
jsonwebtoken = { version = "10.3.0", default-features = false, features = [
    "rust_crypto",
] }
rustls = { version = "0.23", features = ["ring"] }
tower-http = { version = "0.6", features = ["cors"] }
