[package]
name = "socket_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
futures-channel = "0.3.32"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
jsonwebtoken = { version = "10.3.0", default-features = false, features = [
    "rust_crypto",
] }
rustls = { version = "0.23", features = ["ring"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
dotenvy = "0.15.7"
chrono = { version = "0.4", features = ["serde"] }
